--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ name: Roberto Ribeiro
 email: robertov82008@gmail.com
 email_full: mailto:robertov82008@gmail.com
 website: robertov82008.github.io
-website_full: http://robertov82008.github.io/vitae
+website_full: https://robertov82008.github.io/vitae
 github: robertov82008
 twitter: robertov82008
 tel: +55 22 9 9905-4769
