--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ paginate: 5
 gems: [jekyll-paginate]
 port: 4000
 safe: true
-url: https://robertov82008.github.io/vitae
+url: http://robertov82008.github.io
 author: Roberto Ribeiro
 
 # edit this section with your information
@@ -19,7 +19,6 @@ name: Roberto Ribeiro
 email: robertov82008@gmail.com
 email_full: mailto:robertov82008@gmail.com
 website: robertov82008.github.io
-website_full: https://robertov82008.github.io/vitae
 github: robertov82008
 twitter: robertov82008
 tel: +55 22 9 9905-4769
